--- a/Areas/Admin/Views/Accounts/Delete.cshtml
+++ b/Areas/Admin/Views/Accounts/Delete.cshtml
@@ -21,7 +21,7 @@
 
         <dd>
             <div class="col-md-4">
-                <img src="~/Content/images/@Model.file_name" width="100px" /> <!--Lưu ý quyết định nd lưu imagePath trên csdl-->
+                <img src="@Model.imagePath" width="100px" /> <!--Lưu ý quyết định nd lưu imagePath trên csdl-->
             </div>
         </dd>
 
