--- a/Areas/Admin/Views/Accounts/Index.cshtml
+++ b/Areas/Admin/Views/Accounts/Index.cshtml
@@ -154,7 +154,7 @@
                             tr += '<td>' + (k + 1) + '</td>';
                             tr += '<td>' + v.Name + '</td>';
                             tr += '<td>' + v.Id + '</td>';
-                            tr += '<td><img src="/Content/images/' + v.Img + '"width ="50px" alt="' + v.Img + '"/></td>';
+                            tr += '<td><img src="'+v.Img+'" width ="50px" alt="' + v.Img + '"/></td>';
                             tr += '<td>' + v.PhoneNum + '</td>';
                             tr += '<td>' + v.Meta + '</td>';
                             tr += '<td>' + v.Hide + '</td>';
