--- a/Areas/Admin/Views/News/Index.cshtml
+++ b/Areas/Admin/Views/News/Index.cshtml
@@ -67,13 +67,13 @@
         </div>
         <!-- Modal -->
         <div class="modal" id="modalNews" tabindex="-1">
-            <div class="modal-dialog">
-                <div class="modal-content">
+            <div class="modal-dialog modal-lg modal-fullscreen-lg-down" style="height: 90%;">
+                <div class="modal-content h-100">
                     <div class="modal-header">
                         <h5 class="modal-title">Modal title</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body">
+                    <div class="modal-body overflow-scroll">
                         @*<p>Modal body text goes here.</p>*@
                     </div>
                     <div class="modal-footer">
