--- a/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml
+++ b/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml
@@ -100,13 +100,6 @@
                             </ul>
                         </li>
 
-                        <li class="sidebar-item @RenderSection("ql_RoomImage_active", false)">
-                            <a href="@Url.Action("Index", "RoomImages" )" class="sidebar-link">
-                                <i class="fa-fw select-all fas"></i>
-                                <span>Quản lý ảnh slide tin đăng</span>
-                            </a>
-                        </li>
-
                         <li class="sidebar-item @RenderSection("ql_news_active", false)">
                             <a href="@Url.Action("Index", "News" )" class="sidebar-link">
                                 <i class="fa-fw select-all fas"></i>
@@ -143,7 +136,7 @@
                         </li>
 
                         <li class="sidebar-item">
-                            <a href="#" class="sidebar-link">
+                            <a href="/dang-xuat-admin" class="sidebar-link">
                                 <i class="fa-fw select-all fas"></i>
                                 <span>Đăng xuất</span>
                             </a>
