--- a/Areas/Admin/Views/News/Index.cshtml
+++ b/Areas/Admin/Views/News/Index.cshtml
@@ -204,9 +204,9 @@
                     v.Order,
                     dateBegin,
                     v.NewsType,
-                    `<button class="btn btn-xs btn-info btnDetail" data-id="${v.Id}"><i class="fa fa-info-circle" aria-hidden="true"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalNews"> Chi tiết </button>
-                                                     <button class="btn btn-xs btn-warning btnEdit" data-id="${v.Id}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalNews"> Chỉnh sửa </button>
-                                                     <button class="btn btn-xs btn-danger btnDelete" data-id="${v.Id}"><i class="fa fa-trash" aria-hidden="true"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalNews"> Xóa </button>`
+                    `<button class="btn btn-xs btn-info btnDetail" data-id="${v.Id}"><i class="fa fa-info-circle" aria-hidden="true"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalNews"></button>
+                                                     <button class="btn btn-xs btn-warning btnEdit" data-id="${v.Id}"><i class="fa-fw select-all fas"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalNews"></button>
+                                                     <button class="btn btn-xs btn-danger btnDelete" data-id="${v.Id}"><i class="fa fa-trash" aria-hidden="true"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalNews"></button>`
                 ]);
             });
 
@@ -240,9 +240,9 @@
                             tr += '<td>' + dateBegin + '</td>';
                             tr += '<td>' + v.NewsType + '</td>';
                             tr += '<td class="text-right">';
-                            tr += '<button class="btn btn-xs btn-info btnDetail" data-id="' + v.Id + '"><i class="fa fa-info-circle" aria-hidden="true"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalNews"> Chi tiết </button>';
-                            tr += '<button class="btn btn-xs btn-warning btnEdit" data-id="' + v.Id + '"><i class="fa fa-pencil-square-o" aria-hidden="true"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalNews"> Chỉnh sửa </button>';
-                            tr += '<button class="btn btn-xs btn-danger btnDelete" data-id="' + v.Id + '"><i class="fa fa-trash" aria-hidden="true"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalNews"> Xóa </button>';
+                            tr += '<button class="btn btn-xs btn-info btnDetail" data-id="' + v.Id + '"><i class="fa fa-info-circle" aria-hidden="true"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalNews"></button>';
+                            tr += '<button class="btn btn-xs btn-warning btnEdit" data-id="' + v.Id + '"><i class="fa-fw select-all fas"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalNews"></button>';
+                            tr += '<button class="btn btn-xs btn-danger btnDelete" data-id="' + v.Id + '"><i class="fa fa-trash" aria-hidden="true"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalNews"></button>';
                             tr += '</td>';
                             tr += '</tr>';
                             $('#tbnews').append(tr);
