--- a/Areas/Admin/Views/RoomInfoes/Index.cshtml
+++ b/Areas/Admin/Views/RoomInfoes/Index.cshtml
@@ -224,9 +224,9 @@
                     v.Order,
                     dateBegin,
                     v.RoomType,
-                    `<button class="btn btn-xs btn-info btnDetail s" data-id="${v.Id}"><i class="fa fa-info-circle" aria-hidden="true"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalRoom"> Chi tiết </a></button>
-                                <button class="btn btn-xs btn-warning js-btn-edit" data-id="${v.Id}" action-param="/Admin/RoomInfoes/SangEdit/${v.Id}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i><a href="" class="" data-bs-toggle="modal" data-bs-target="#modalRoom">Chỉnh sửa</a></button>
-                                                             <button class="btn btn-xs btn-danger btnDelete" data-id="${v.Id}"><i class="fa fa-trash" aria-hidden="true"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalRoom"> Xóa </a></button>`
+                    `<button class="btn btn-xs btn-info btnDetail s" data-id="${v.Id}"><i class="fa fa-info-circle" aria-hidden="true"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalRoom"></a></button>
+                                <button class="btn btn-xs btn-warning js-btn-edit" data-id="${v.Id}" action-param="/Admin/RoomInfoes/SangEdit/${v.Id}"><i class="fa-fw select-all fas"></i><a href="" class="" data-bs-toggle="modal" data-bs-target="#modalRoom"></a></button>
+                                                             <button class="btn btn-xs btn-danger btnDelete" data-id="${v.Id}"><i class="fa fa-trash" aria-hidden="true"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalRoom"></a></button>`
                 ]);
             });
 
@@ -262,12 +262,11 @@
                             tr += '<td>' + dateBegin + '</td>';
                             tr += '<td>' + v.RoomType + '</td>';
                             tr += '<td class="text-right">';
-                            tr += '<button class="btn btn-xs btn-info btnDetail" data-id="' + v.Id + '"><i class="fa fa-info-circle" aria-hidden="true"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalRoom"> Chi tiết </a></button>';
-                            //tr += '<button class="btn btn-xs btn-warning btnEdit" data-id="' + v.Id + '"><i class="fa fa-pencil-square-o" aria-hidden="true"></i><a href="" class="" data-bs-toggle="modal" data-bs-target="#modalRoom"> Chỉnh sửa </a></button>';
+                            tr += '<button class="btn btn-xs btn-info btnDetail" data-id="' + v.Id + '"><i class="fa fa-info-circle" aria-hidden="true"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalRoom"></a></button>';
 
-                            tr += '<button class="btn btn-xs btn-warning js-btn-edit" data-id="' + v.Id + '" action-param="quan-ly/sua-bai-dang?id=' + v.Id + '"><i class="fa fa-pencil-square-o" aria-hidden="true"></i><a href="" class="" data-bs-toggle="modal" data-bs-target="#modalRoom">Chỉnh sửa</a></button>';
+                            tr += '<button class="btn btn-xs btn-warning js-btn-edit" data-id="' + v.Id + '" action-param="quan-ly/sua-bai-dang?id=' + v.Id + '"><i class="fa-fw select-all fas"></i><a href="" class="" data-bs-toggle="modal" data-bs-target="#modalRoom"></a></button>';
 
-                            tr += '<button class="btn btn-xs btn-danger btnDelete" data-id="' + v.Id + '"><i class="fa fa-trash" aria-hidden="true"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalRoom"> Xóa </a></button>';
+                            tr += '<button class="btn btn-xs btn-danger btnDelete" data-id="' + v.Id + '"><i class="fa fa-trash" aria-hidden="true"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalRoom"></a></button>';
                             tr += '</td>';
                             tr += '</tr>';
                             $('#tbroom').append(tr);
