--- a/Areas/Admin/Views/SubMenus/Index.cshtml
+++ b/Areas/Admin/Views/SubMenus/Index.cshtml
@@ -164,9 +164,9 @@
                     v.Order,
                     dateBegin,
                     v.Menu,
-                    `<button class="btn btn-xs btn-info btnDetail" data-id="${v.Id}"><i class="fa fa-info-circle" aria-hidden="true"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalSubMenu"> Chi tiết </button>
-                         <button class="btn btn-xs btn-warning btnEdit" data-id="${v.Id}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalSubMenu"> Chỉnh sửa </button>
-                         <button class="btn btn-xs btn-danger btnDelete" data-id="${v.Id}"><i class="fa fa-trash" aria-hidden="true"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalSubMenu"> Xóa </button>`
+                    `<button class="btn btn-xs btn-info btnDetail" data-id="${v.Id}"><i class="fa fa-info-circle" aria-hidden="true"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalSubMenu"></button>
+                         <button class="btn btn-xs btn-warning btnEdit" data-id="${v.Id}"><i class="fa-fw select-all fas"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalSubMenu"></button>
+                         <button class="btn btn-xs btn-danger btnDelete" data-id="${v.Id}"><i class="fa fa-trash" aria-hidden="true"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalSubMenu"></button>`
                 ]);
             });
 
