--- a/Views/Shared/_MyLayout.cshtml
+++ b/Views/Shared/_MyLayout.cshtml
@@ -47,7 +47,7 @@
             <div class="full">
                 <div class="center-desk">
                     <div class="logo">
-                        <a href="index.html"><img src="~/Content/images/logo-web.jpg" alt="Logo" style="width: 135px; height: 54px; object-fit: contain;"/></a>
+                        <a href="#"><img src="~/Content/images/logo-web.jpg" alt="Logo" style="width: 135px; height: 54px; object-fit: contain;"/></a>
                     </div>
                 </div>
             </div>
