Chức năng bộ lọc tìm kiếm thông tin phòng

--- a/Views/Api_/GetUserPostRooms.cshtml
+++ b/Views/Api_/GetUserPostRooms.cshtml
@@ -71,7 +71,7 @@
                         <a class="btn @nut_an_hien.Item1 btn-sm mt-2" href="" type="button">
                             @nut_an_hien.Item2
                         </a>
-                        <button class="btn btn-outline-danger btn-sm mt-2" type="button">
+                        <button class="js-delete-post btn btn-outline-danger btn-sm mt-2" type="button" data-id="@room.id">
                             Xóa tin
                         </button>
                     </div>
