--- a/Areas/Admin/Views/RoomInfoes/Index.cshtml
+++ b/Areas/Admin/Views/RoomInfoes/Index.cshtml
@@ -230,7 +230,7 @@
                     dateBegin,
                     v.RoomType,
                     `<button class="btn btn-xs btn-info btnDetail s" data-id="${v.Id}"><i class="fa fa-info-circle" aria-hidden="true"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalRoom"></a></button>
-                                <button class="btn btn-xs btn-warning js-btn-edit" data-id="${v.Id}" action-param="/Admin/RoomInfoes/SangEdit/${v.Id}"><i class="fa-fw select-all fas"></i><a href="" class="" data-bs-toggle="modal" data-bs-target="#modalRoom"></a></button>
+                                <button class="btn btn-xs btn-warning js-btn-edit" data-id="${v.Id}" action-param="/Admin/RoomInfoes/SangEdit/${v.Id}"><i class="fa-fw select-all fas" aria-hidden="true"></i><a href="" class="" data-bs-toggle="modal" data-bs-target="#modalRoom">Chỉnh sửa</a></button>
                                                              <button class="btn btn-xs btn-danger btnDelete" data-id="${v.Id}"><i class="fa fa-trash" aria-hidden="true"></i><a href="#" class="" data-bs-toggle="modal" data-bs-target="#modalRoom"></button>`
                 ]);
             });
